--- a/PocketChef/wear/build.gradle
+++ b/PocketChef/wear/build.gradle
@@ -19,8 +19,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.support:wearable:2.0.0-alpha3'
     compile 'com.google.android.gms:play-services-wearable:9.8.0'
     provided 'com.google.android.wearable:wearable:2.0.0-alpha3'
+    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
 }
